[gd_scene load_steps=20 format=4 uid="uid://cecmhya3e7tcg"]

[ext_resource type="Texture2D" uid="uid://8qlqkermhhge" path="res://assets/sprites/world_tileset.png" id="1_gyd4n"]
[ext_resource type="Texture2D" uid="uid://cte2jsa6lla0j" path="res://assets/sprites/fire_coral_fan.png" id="2_8mm5o"]
[ext_resource type="PackedScene" uid="uid://cxutkj6p4e7l" path="res://scenes/coin.tscn" id="3_l1f8a"]
[ext_resource type="PackedScene" uid="uid://d2ifkhjx8d3tm" path="res://scenes/plateform.tscn" id="4_y4lsp"]
[ext_resource type="PackedScene" uid="uid://b6krkacapm545" path="res://scenes/revive_zone.tscn" id="5_am2r2"]
[ext_resource type="PackedScene" uid="uid://d2ljkqrohgve5" path="res://scenes/kill_zone.tscn" id="6_3ok77"]
[ext_resource type="Script" path="res://scripts/hide.gd" id="7_mcvwn"]
[ext_resource type="PackedScene" uid="uid://btk01jfoctugo" path="res://scenes/win_zone.tscn" id="8_acdpv"]
[ext_resource type="PackedScene" uid="uid://ce1qx3t8dwbme" path="res://scenes/slim.tscn" id="9_agg0e"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vg1xx"]
texture = ExtResource("1_gyd4n")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -5.625, 8, -0.875, -8, -3.375)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -5.375, 8, -0.125, -8, -0.25, -8, -5.375)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -3.75, -8, -0.25, -8, -5.375)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -5.625, 8, -0.875, -8, -3.375)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -5.375, 8, -0.125, -8, -0.25, -8, -5.375)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -3.75, -8, -0.25, -8, -5.375)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -5.625, 8, -0.875, -8, -3.375)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -5.375, 8, -0.125, -8, -0.25, -8, -5.375)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -3.75, -8, -0.25, -8, -5.375)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wabi6"]
texture = ExtResource("2_8mm5o")
margins = Vector2i(4, 0)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_3g5lm"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vg1xx")
sources/1 = SubResource("TileSetAtlasSource_wabi6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8a24"]
size = Vector2(77, 15.5571)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xefcq"]
texture = ExtResource("1_gyd4n")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_40xwv"]
sources/0 = SubResource("TileSetAtlasSource_xefcq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_foynx"]
size = Vector2(67, 57)

[sub_resource type="Animation" id="Animation_fxfvi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(86, 788)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("slim:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ue4nl"]
resource_name = "move"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("slim:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(86, 788), Vector2(164, 789)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("slim:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xr3ol"]
_data = {
"RESET": SubResource("Animation_fxfvi"),
"move": SubResource("Animation_ue4nl")
}

[node name="Map2" type="Node2D"]

[node name="Mid" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAADADIAAAAAAAEAAAAEADIAAAAAAAEAAAAFADIAAAAAAAEAAAAGADIAAAAAAAEAAAAHADIAAAAAAAEAAAAIADIAAAAAAAEAAAAJADIAAAAAAAEAAAAKADIAAAAAAAEAAAALADIAAAAAAAEAAAANADIAAAAAAAEAAAABADIAAAAAAAEAAAAMADIAAAAAAAEAAAACADIAAAAAAAEAAAAOADIAAAAAAAEAAAAPADIAAAAAAAEAAAAQADIAAAAAAAEAAAARADIAAAAAAAEAAAAAADIAAAAAAAEAAAD//zIAAAAAAAEAAAD+/zIAAAAAAAEAAAD9/zIAAAAAAAEAAAASADIAAQAAAAEAAAASADEAAQAAAAAAAAATADEAAQAAAAAAAAAUADEAAQAAAAAAAAAVADEAAQABAAAAAAATADIAAQAAAAEAAAAUADIAAQAAAAEAAAAVADIAAQAAAAEAAAAWADEAAQABAAAAAAAWADIAAQABAAEAAAAXADIAAQAAAAEAAAAYADIAAQAAAAEAAAAZADIAAQAAAAEAAAAaADIAAQAAAAEAAAAbADIAAQAAAAEAAAAbADEAAQAAAAEAAAAbADAAAQAAAAEAAAAaADAAAQAAAAEAAAAZADAAAQAAAAEAAAAZADEAAQAAAAEAAAAaADEAAQAAAAEAAAAaAC8AAQAAAAEAAAAZAC8AAQAAAAEAAAAZAC4AAQAAAAEAAAAYAC4AAQAAAAEAAAAXAC4AAQAAAAEAAAAWAC4AAQAAAAEAAAAVAC4AAQAAAAEAAAAUAC4AAQAAAAEAAAATAC4AAQAAAAEAAAASAC4AAQAAAAEAAAARAC0AAQAAAAEAAAAQAC0AAQAAAAEAAAAPAC0AAQAAAAEAAAAOAC0AAQAAAAEAAAAQAC4AAQAAAAEAAAARAC4AAQAAAAEAAAAVAC0AAQAAAAEAAAAVACwAAQAAAAEAAAAUACwAAQAAAAEAAAAUACsAAQAAAAEAAAATACsAAQAAAAEAAAASACsAAQAAAAEAAAASACwAAQAAAAEAAAARACwAAQAAAAEAAAASAC0AAQAAAAEAAAATAC0AAQAAAAEAAAAUAC0AAQAAAAEAAAATACwAAQAAAAEAAAA=")
tile_set = SubResource("TileSet_3g5lm")

[node name="Coins" type="Node2D" parent="Mid"]

[node name="coin" parent="Mid/Coins" instance=ExtResource("3_l1f8a")]
position = Vector2(176, 776)

[node name="coin2" parent="Mid/Coins" instance=ExtResource("3_l1f8a")]
position = Vector2(12, 761)

[node name="coin3" parent="Mid/Coins" instance=ExtResource("3_l1f8a")]
position = Vector2(103, 708)

[node name="coin4" parent="Mid/Coins" instance=ExtResource("3_l1f8a")]
position = Vector2(74, 760)

[node name="Plateforms" type="Node2D" parent="Mid"]

[node name="plateform" parent="Mid/Plateforms" instance=ExtResource("4_y4lsp")]
position = Vector2(112, 798)

[node name="plateform2" parent="Mid/Plateforms" instance=ExtResource("4_y4lsp")]
position = Vector2(135, 749)

[node name="CheckPoints" type="Node2D" parent="Mid"]
position = Vector2(56, 794)

[node name="revive_zone" parent="Mid/CheckPoints" instance=ExtResource("5_am2r2")]

[node name="revive_zone2" parent="Mid/CheckPoints" instance=ExtResource("5_am2r2")]
position = Vector2(-61, 0)

[node name="KillZones" type="Node2D" parent="Mid"]

[node name="kill_zone" parent="Mid/KillZones" instance=ExtResource("6_3ok77")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mid/KillZones/kill_zone"]
position = Vector2(329.5, 802.779)
shape = SubResource("RectangleShape2D_l8a24")

[node name="kill_zone2" parent="Mid/KillZones" instance=ExtResource("6_3ok77")]

[node name="Hides" type="Node2D" parent="Mid"]

[node name="Hide" type="TileMapLayer" parent="Mid/Hides"]
z_index = 6
tile_map_data = PackedByteArray("AAANAC4AAAAAAAEAAAANAC8AAAAAAAEAAAANADAAAAAAAAEAAAANADEAAAAAAAEAAAAOADEAAAAAAAEAAAAPADEAAAAAAAEAAAAPADAAAAAAAAEAAAAQADAAAAAAAAEAAAAQAC8AAAAAAAEAAAAQAC4AAAAAAAEAAAAPAC4AAAAAAAEAAAAOAC4AAAAAAAEAAAAOAC8AAAAAAAEAAAAOADAAAAAAAAEAAAAPAC8AAAAAAAEAAAAOADIAAAAAAAEAAAANADIAAAAAAAEAAAANADMAAAAAAAEAAAAOADMAAAAAAAEAAAAPADMAAAAAAAEAAAAPADIAAAAAAAEAAAAQADIAAAAAAAEAAAARADIAAAAAAAEAAAARADEAAAAAAAEAAAARADAAAAAAAAEAAAARAC8AAAAAAAEAAAAQADEAAAAAAAEAAAAQADMAAAAAAAEAAAARADMAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_40xwv")
script = ExtResource("7_mcvwn")

[node name="Area2D" type="Area2D" parent="Mid/Hides/Hide"]
collision_mask = 2

[node name="Hide2" type="TileMapLayer" parent="Mid/Hides"]
z_index = 6
tile_set = SubResource("TileSet_40xwv")
script = ExtResource("7_mcvwn")

[node name="Area2D" type="Area2D" parent="Mid/Hides/Hide2"]
collision_mask = 2

[node name="Hide3" type="TileMapLayer" parent="Mid/Hides"]
z_index = 6
tile_map_data = PackedByteArray("AAANAC4AAAAAAAEAAAANAC8AAAAAAAEAAAANADAAAAAAAAEAAAANADEAAAAAAAEAAAAOADEAAAAAAAEAAAAPADEAAAAAAAEAAAAPADAAAAAAAAEAAAAQADAAAAAAAAEAAAAQAC8AAAAAAAEAAAAQAC4AAAAAAAEAAAAPAC4AAAAAAAEAAAAOAC4AAAAAAAEAAAAOAC8AAAAAAAEAAAAOADAAAAAAAAEAAAAPAC8AAAAAAAEAAAAOADIAAAAAAAEAAAANADIAAAAAAAEAAAANADMAAAAAAAEAAAAOADMAAAAAAAEAAAAPADMAAAAAAAEAAAAPADIAAAAAAAEAAAAQADIAAAAAAAEAAAARADIAAAAAAAEAAAARADEAAAAAAAEAAAARADAAAAAAAAEAAAARAC8AAAAAAAEAAAAQADEAAAAAAAEAAAAQADMAAAAAAAEAAAARADMAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_40xwv")
script = ExtResource("7_mcvwn")

[node name="Area2D" type="Area2D" parent="Mid/Hides/Hide3"]
collision_mask = 2

[node name="Hide4" type="TileMapLayer" parent="Mid/Hides"]
z_index = 6
tile_map_data = PackedByteArray("AAANAC4AAAAAAAEAAAANAC8AAAAAAAEAAAANADAAAAAAAAEAAAANADEAAAAAAAEAAAAOADEAAAAAAAEAAAAPADEAAAAAAAEAAAAPADAAAAAAAAEAAAAQADAAAAAAAAEAAAAQAC8AAAAAAAEAAAAQAC4AAAAAAAEAAAAPAC4AAAAAAAEAAAAOAC4AAAAAAAEAAAAOAC8AAAAAAAEAAAAOADAAAAAAAAEAAAAPAC8AAAAAAAEAAAAOADIAAAAAAAEAAAANADIAAAAAAAEAAAANADMAAAAAAAEAAAAOADMAAAAAAAEAAAAPADMAAAAAAAEAAAAPADIAAAAAAAEAAAAQADIAAAAAAAEAAAARADIAAAAAAAEAAAARADEAAAAAAAEAAAARADAAAAAAAAEAAAARAC8AAAAAAAEAAAAQADEAAAAAAAEAAAAQADMAAAAAAAEAAAARADMAAAAAAAEAAAD6/y0AAAAAAAEAAAD6/y4AAAAAAAEAAAD5/y4AAAAAAAEAAAD5/y8AAAAAAAEAAAD4/y8AAAAAAAEAAAD4/zAAAAAAAAEAAAD5/zEAAAAAAAEAAAD6/zEAAAAAAAEAAAD7/zEAAAAAAAEAAAD8/zAAAAAAAAEAAAD8/y8AAAAAAAEAAAD8/y4AAAAAAAEAAAD7/y4AAAAAAAEAAAD6/y8AAAAAAAEAAAD4/zEAAAAAAAEAAAD4/zIAAAAAAAEAAAD4/zMAAAAAAAEAAAD5/zMAAAAAAAEAAAD6/zMAAAAAAAEAAAD7/zIAAAAAAAEAAAD8/zIAAAAAAAEAAAD8/zEAAAAAAAEAAAD9/zEAAAAAAAEAAAD9/zAAAAAAAAEAAAD9/y8AAAAAAAEAAAD7/y8AAAAAAAEAAAD6/zAAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_40xwv")
script = ExtResource("7_mcvwn")

[node name="Area2D" type="Area2D" parent="Mid/Hides/Hide4"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mid/Hides/Hide4/Area2D"]
position = Vector2(-70.5, 783.5)
shape = SubResource("RectangleShape2D_foynx")

[node name="win_zone" parent="Mid" instance=ExtResource("8_acdpv")]

[node name="Enemy" type="Node2D" parent="Mid"]

[node name="slim" parent="Mid/Enemy" instance=ExtResource("9_agg0e")]
position = Vector2(86, 788)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Mid/Enemy/slim"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_xr3ol")
}
autoplay = "move"

[connection signal="body_entered" from="Mid/Hides/Hide/Area2D" to="Mid/Hides/Hide" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Mid/Hides/Hide/Area2D" to="Mid/Hides/Hide" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Mid/Hides/Hide2/Area2D" to="Mid/Hides/Hide2" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Mid/Hides/Hide2/Area2D" to="Mid/Hides/Hide2" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Mid/Hides/Hide3/Area2D" to="Mid/Hides/Hide3" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Mid/Hides/Hide3/Area2D" to="Mid/Hides/Hide3" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Mid/Hides/Hide4/Area2D" to="Mid/Hides/Hide4" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Mid/Hides/Hide4/Area2D" to="Mid/Hides/Hide4" method="_on_area_2d_body_exited"]
